@@ -39,6 +39,9 @@ Release 0.2.1 - Unreleased
    HBASE-762   deleteFamily takes timestamp, should only take row and family.
                Javadoc describes both cases but only implements the timestamp
                case. (Jean-Daniel Cryans via Jim Kellerman)
+   HBASE-768   This message 'java.io.IOException: Install 0.1.x of hbase and run
+               its migration first' is useless (Jean-Daniel Cryans via Jim
+               Kellerman)
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
